--- a/pages/4semnatic.html
+++ b/pages/4semnatic.html
@@ -13,7 +13,7 @@
 <nav>
     <center><a href="4notabelanja.html">World Electronics</a> |
         <a href="4playlists.html">World's Media</a> |
-        <a href="form.html">Become part of the "World"</a></center>      
+        <a href="4form.html">Become part of the "World"</a></center>      
 </nav>
 <body>
     <section>
