--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <br>
     <a href="pages/Heading.html">HTML?</a>
     <br>
-    <a href="pages/Text Formatting.htm">Text Formatting</a>
+    <a href="pages/Anchor & Image.html">Social Media</a></a>
     <br>
-    <a href="pages/Anchor & Image.html">Social Media</a>
+    <a href="pages/Text Formatting.htm">Text Formatting
     <br>
     <a href="pages/4semnatic.html">Article</a>
 </center>
