--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <h1><center>Welcome to the "World".</center></h1>
 <h2><center>a place where you know everything</center></h2>
 <center>
-    <a href="pages/List.html">List</a>
-    <br>
     <a href="pages/Heading.html">HTML?</a>
     <br>
-    <a href="pages/Anchor & Image.html">Social Media</a></a>
+    <a href="pages/List.html">List</a>
+    <br>
+    <a href="pages/Anchor & Image.html">Social Media</a>
     <br>
     <a href="pages/Text Formatting.htm">Text Formatting
     <br>
