--- a/pages/4semnatic.html
+++ b/pages/4semnatic.html
@@ -11,9 +11,9 @@
 <center><h1>Welcome to the "World".</h1>
 <h2>a place where you know everything</h2></center>
 <nav>
-    <center><a href="4notabelanja.html">World Electronics</a> |
+    <center><a href="4form.html">Become part of the "World"</a> |
         <a href="4playlists.html">World's Media</a> |
-        <a href="4form.html">Become part of the "World"</a></center>      
+        <a href="4notabelanja.html">World Electronics </a></center>      
 </nav>
 <body>
     <section>
