--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <center>
     <a href="pages/Heading.html">HTML?</a>
     <br>
-    <a href="pages/List.html">List</a>
+    <a href="pages/List.html">List.</a>
     <br>
-    <a href="pages/Anchor & Image.html">Social Media</a>
+    <a href="pages/Anchor & Image.html">Social Media.</a>
     <br>
-    <a href="pages/Text Formatting.htm">Text Formatting
+    <a href="pages/Text Formatting.htm">Text Formatting.</a>
     <br>
-    <a href="pages/4semnatic.html">Article</a>
+    <a href="pages/4semnatic.html">Article.</a>
 </center>
 </html>
