--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <br>
     <a href="pages/Anchor & Image.html">Social Media.</a>
     <br>
-    <a href="pages/Text Formatting.htm">Text Formatting.</a>
+    <a href="pages/Text Formatting.html">Text Formatting.</a>
     <br>
     <a href="pages/4semnatic.html">Article.</a>
+    <a href="pages/galeri.html">World's Animal Gallery</a>
 </center>
 </html>
