--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
     <a href="pages/4semnatic.html">Article.</a>
    <br>
     <a href="pages/galeri.html">World's Animal Gallery</a>
+    <br>
+    <a href="pages/grid.html">Grid</a>
+    <br>
+    <a href="pages/flexbox.html">Flexbox</a>
 </center>
 </html>
