--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <a href="pages/grid.html">Grid</a>
     <br>
     <a href="pages/flexbox.html">Flexbox</a>
+    <br>
+    <a href="pages/Jankenpon.html">Jankenpon</a>
 </center>
 </html>
