--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <a href="pages/flexbox.html">Flexbox</a>
     <br>
     <a href="pages/Jankenpon.html">Jankenpon</a>
+    <br>
+    <a href="pages/todolist.html"></a>
+    <br>
+    <a href="pages/data_mahasiswa.html"></a>
 </center>
 </html>
