--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     <br>
     <a href="pages/Jankenpon.html">Jankenpon</a>
     <br>
-    <a href="pages/todolist.html"></a>
+    <a href="pages/todolist.html">To do List</a>
     <br>
-    <a href="pages/data_mahasiswa.html"></a>
+    <a href="pages/data_mahasiswa.html">data mapping</a>
+    <br>
+    <a href="pages/responsiveweb.html">Responsive Web</a>
 </center>
 </html>
