--- a/pages/responsiveweb.html
+++ b/pages/responsiveweb.html
@@ -58,15 +58,15 @@
             <center><h2>Artikel terkait</h2>
             <p>Learn how to code</p>
             <ul>
-                <li>HTML</li>
+                <li> <a class="text-decoration-none text-dark" href="#">HTML</a></li>
                 <hr>
-                <li>CSS</li>
+                <li> <a class="text-decoration-none text-dark" href="#">CSS</a></li>
                 <hr>
-                <li>JavaScript</li>
+                <li> <a class="text-decoration-none text-dark" href="#">JavaScript</a></li>
                 <hr>
-                <li>PHP</li>
+                <li> <a class="text-decoration-none text-dark" href="#">PHP</a></li>
                 <hr>
-                <li>Python</li></center>
+                <li> <a class="text-decoration-none text-dark" href="#">Python</a></li></center>
         </div>
     </div>
 </body>
