--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <a href="pages/data_mahasiswa.html">data mapping</a>
     <br>
     <a href="pages/responsiveweb.html">Responsive Web</a>
+    <br>
+    <a href="pages/webdesign.html">Web Design</a>
 </center>
 </html>
